# X-AVTO

./: README.md  index.html  mqtt-test-server.js  package-lock.json  package.json  websocket-test-server.js
public/fonts/: fonts.css
src/: App.css  App.tsx  routes.ts  test-fonts.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fix.txt  fix2.txt  fix_line.txt  main.rs
src-tauri/src/components/: mod.rs
src-tauri/src/ports/: commands.rs  core.rs  main.rs  mod.rs  process.rs  types.rs  unix.rs  windows.rs
src-tauri/src/utils/: cpu_frequency.rs  cpu_frequency.rs.new  db.rs  fix.txt  gpu_info.rs  mod.rs  script_runner.rs  system_info.rs  system_info_backup.rs  system_info_temp.rs  terminal.rs  test.rs
src-tauri/src/utils/gpu_monitor_app/: Program.cs
src/Tabs/: TabContext.tsx
src/Tabs/HomeTab/: Home.css  Home.tsx
src/Tabs/PortsTab/: Ports.css  Ports.tsx  PortsTab.tsx  types.ts
src/Tabs/PortsTab/components/: PortsSearch.tsx  PortsTable.tsx  ResizeableHeader.tsx
src/Tabs/PortsTab/hooks/: usePorts.ts
src/Tabs/PortsTab/utils/: addressFormatter.ts
src/Tabs/RequestsTab/: Requests.css  Requests.tsx  RequestsTab.css  RequestsTab.tsx  types.ts
src/Tabs/RequestsTab/components/: ResponsePanel.tsx
src/Tabs/RequestsTab/protocols/: GraphQLPanel.tsx  GraphQLProtocol.tsx  HttpPanel.tsx  HttpProtocol.tsx  MQTTPanel.tsx  SocketIOPanel.tsx  WebSocketPanel.tsx
src/Tabs/ScriptsTab/: Scripts.tsx  ScriptsTab.css  ScriptsTab.tsx
src/Tabs/StatusTab/: Status.tsx  StatusTab.css  StatusTab.tsx
src/Tabs/StatusTab/components/: CpuInfo.tsx  (+3 more)
src/Tabs/TerminalTab/: Terminal.css  Terminal.tsx  style.css
src/assets/: README.md
src/assets/fonts/: fonts.css
src/assets/icons/: index.ts
src/components/Navigation/: Navigation.css  Navigation.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/TopBar/: TopBar.css  TopBar.tsx
(+2 files in other folders)
